<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginHorizontal="64dp">

    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        android:contentDescription="@string/app_name"
        app:tint="@color/md_theme_primary"
        app:layout_constraintBottom_toTopOf="@+id/createRoomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_48dp" />

    <Button
        android:id="@+id/createRoomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_room_button"
        android:maxLines="1"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toTopOf="@+id/joinRoomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/joinRoomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_room_button"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/createStoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_story_button"
        android:maxLines="1"
        android:layout_marginVertical="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinRoomButton"
        app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>