<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="22dp">
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/actionLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/actionLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/messageLayout"
            app:layout_constraintEnd_toStartOf="@+id/playerLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drag_handle">

            <AutoCompleteTextView
                android:id="@+id/actionDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/action_dropdown"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playerLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/messageLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/actionLayout"
            app:layout_constraintTop_toBottomOf="@+id/drag_handle">

            <AutoCompleteTextView
                android:id="@+id/playerDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_dropdown"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/option1Layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionLayout">

            <EditText
                android:id="@+id/messageField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_field"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/option1Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/addButton"
            app:layout_constraintEnd_toStartOf="@+id/option2Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageLayout">

            <EditText
                android:id="@+id/option1Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/option1_field"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/option2Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/option1Layout"
            app:layout_constraintTop_toBottomOf="@+id/messageLayout">

            <EditText
                android:id="@+id/option2Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/option2_field"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option1Layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>